Added app.js file. Targetting toggle-btn, close-btn, and sidebar.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
 
-    <!-- toggle button start -->
+    <!-- sidebar toggle button start -->
     <button type="button" class="sidebar-toggle">
         <i class="fas fa-bars"></i>
     </button>
-    <!-- toggle button end -->
+    <!-- sidebar toggle button end -->
 
     <!-- sidebar start -->
     <aside class="sidebar">
